# winmd-rs

./: Cargo.toml  README.md  readme.md
examples/: dump.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: attribute.rs  blob.rs  cache.rs  codes.rs  constant.rs  database.rs  element_type.rs  enums.rs  error.rs  file.rs  flags.rs  generic_param.rs  helpers.rs  interface_impl.rs  lib.rs  main.rs  member_ref.rs  method_def.rs  param.rs  reader.rs  row.rs  signatures.rs  tables.rs  type_def.rs  type_reader.rs  type_ref.rs  type_spec.rs
src/parsed/: attribute.rs  element_type.rs
tests/: attributes.rs  build_winmd.cmd  dump.rs  metadata.idl  metadata.winmd  reader.rs  stringable.rs  tables.rs
